@@ -1,3 +1,4 @@
 	.globl include_sym
+	.data
 include_sym:
-	.long	exclude_sym - include_sym
+	.long	exclude_sym
