@@ -1,3 +1,4 @@
 	.globl exclude_sym
+	.data
 exclude_sym:
 	.long	0
